GtkFileChooserWidget: remove unused fields and cleanup code.

These fields are never set, so we don't need the code to clean them up.

https://bugzilla.gnome.org/show_bug.cgi?id=725164